The object now rotates in the y and z direction.  There is a prefab as well that can be easily used for any other user inputs that we need which should make other inputs easier.

--- a/PhysicsLabProj/Assembly-CSharp-vs.csproj
+++ b/PhysicsLabProj/Assembly-CSharp-vs.csproj
@@ -46,9 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\MortarController.cs" />
-     <Compile Include="Assets\Text.cs" />
-     <Compile Include="Assets\TextGui.cs" />
+     <Compile Include="Assets\Scripts\MortarControl.cs" />
+     <Compile Include="Assets\Scripts\TextGui.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
