Started working on rotation problem with legs but couldn't get if working yet.

--- a/PhysicsLabProj/Assembly-CSharp-vs.csproj
+++ b/PhysicsLabProj/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\LegRotation.cs" />
      <Compile Include="Assets\Scripts\MortarControl.cs" />
      <Compile Include="Assets\Scripts\TextGui.cs" />
  <Reference Include="UnityEngine.UI">
