Set up very basic intro to show player how to use everything.  Also disabled angle shots so that velocity is the only thing the player alters to start.

--- a/PhysicsLabProj/Assembly-CSharp-vs.csproj
+++ b/PhysicsLabProj/Assembly-CSharp-vs.csproj
@@ -131,6 +131,7 @@
      <Compile Include="Assets\FOR REDISTRIBUTION\Standard Assets\Utility\TimedObjectDestructor.cs" />
      <Compile Include="Assets\FOR REDISTRIBUTION\Standard Assets\Utility\WaypointCircuit.cs" />
      <Compile Include="Assets\FOR REDISTRIBUTION\Standard Assets\Utility\WaypointProgressTracker.cs" />
+     <Compile Include="Assets\Scripts\IntroScript.cs" />
      <Compile Include="Assets\Scripts\LegRotation.cs" />
      <Compile Include="Assets\Scripts\MortarControl.cs" />
      <Compile Include="Assets\Scripts\Projectile.cs" />
