--- a/PhysicsLabProj/Assembly-CSharp.csproj
+++ b/PhysicsLabProj/Assembly-CSharp.csproj
@@ -131,11 +131,11 @@
      <Compile Include="Assets\FOR REDISTRIBUTION\Standard Assets\Utility\TimedObjectDestructor.cs" />
      <Compile Include="Assets\FOR REDISTRIBUTION\Standard Assets\Utility\WaypointCircuit.cs" />
      <Compile Include="Assets\FOR REDISTRIBUTION\Standard Assets\Utility\WaypointProgressTracker.cs" />
+     <Compile Include="Assets\Scripts\Explosions.cs" />
      <Compile Include="Assets\Scripts\IntroScript.cs" />
      <Compile Include="Assets\Scripts\LegRotation.cs" />
      <Compile Include="Assets\Scripts\MortarControl.cs" />
      <Compile Include="Assets\Scripts\Projectile.cs" />
-     <Compile Include="Assets\Scripts\TargetPart.cs" />
      <Compile Include="Assets\Scripts\TextGui.cs" />
      <None Include="Assets\FOR REDISTRIBUTION\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\FOR REDISTRIBUTION\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
